finish all except scoremanager && add submit page

--- a/app/templates/changePassword.html
+++ b/app/templates/changePassword.html
@@ -55,7 +55,8 @@
             $.post('/api/changePassword',data.field,function(res){
                 if(res.code==0){
                     layer.msg("修改成功！")
-                    miniPage.hashHome();
+                    //此时后台已经清除登录状态了，直接跳转
+                     window.location.href="/login"
                 }
                 else{
                     layer.msg("修改失败!"+res.msg);
