--- a/app/templates/province/editSchool.html
+++ b/app/templates/province/editSchool.html
@@ -2,25 +2,31 @@
 
     <div class="layui-form layuimini-form">
         <div class="layui-form-item">
+            <input type="hidden" name="id"   value="{{school.id}}" >
             <label class="layui-form-label required">学校名称</label>
             <div class="layui-input-block">
-                <input type="text" name="name" lay-verify="required" lay-reqtext="学校名称不能为空"  value="" class="layui-input">
+                <input type="text" name="name" lay-verify="required" lay-reqtext="学校名称不能为空"  value="{{school.name}}" class="layui-input">
             </div>
         </div>
 		<div class="layui-form-item">
 		    <label class="layui-form-label required">学校代码</label>
 		    <div class="layui-input-block">
-		        <input type="text" name="code" lay-verify="required" lay-reqtext="学校代码不能为空"  value="" class="layui-input">
+		        <input type="text" name="code" lay-verify="required" lay-reqtext="学校代码不能为空"  value="{{school.code}}" class="layui-input">
 		    </div>
 		</div>
         <div class="layui-form-item">
             <label class="layui-form-label required">学校类比</label>
             <div class="layui-input-block">
-                <input type="radio" name="type" value="本科" title="本科" checked="">
+                {% if school.type=="本科" %}
+                <input type="radio" name="type" value="本科" title="本科" checked=>
                 <input type="radio" name="type" value="专科" title="专科">
+                {% else %}
+                <input type="radio" name="type" value="本科" title="本科" >
+                <input type="radio" name="type" value="专科" title="专科" checked=>
+                {% endif %}
             </div>
         </div>
-		
+
         <div class="layui-form-item">
             <div class="layui-input-block">
                 <button class="layui-btn layui-btn-normal" lay-submit lay-filter="saveBtn">确认保存</button>
@@ -38,28 +44,28 @@
         /**
          * 初始化表单，要加上，不然刷新部分组件可能会不加载
          */
-        form.render();
 
+        form.render();
         // 当前弹出层，防止ID被覆盖
         var parentIndex = layer.index;
 
         //监听提交
         form.on('submit(saveBtn)', function (data) {
-            $.post('/api/school',data.field,function(res){
-                if(res.code==0){
-                    layer.msg('添加成功！');
-                    // 关闭弹出层
-                    layer.close(parentIndex);
-                }
-                else{
-                    layer.msg("添加失败！"+res.msg);
+            $.ajax({
+                url:'/api/school',
+                data:data.field,
+                method:"PUT",
+                success:function(res){
+                    if(res.code==0){
+                        layer.msg('保存成功！');
+                        // 关闭弹出层
+                        layer.close(parentIndex);
+                    }
+                    else{
+                        layer.msg("保存失败！"+res.msg);
+                    }
                 }
             })
-
-
-
-
-
             return false;
         });
 
