--- a/app/templates/province/school.html
+++ b/app/templates/province/school.html
@@ -15,12 +15,12 @@
                         <div class="layui-inline">
                             <label class="layui-form-label">学校代码</label>
                             <div class="layui-input-inline">
-                                <input type="text" name="student_number" autocomplete="off" class="layui-input">
+                                <input type="text" name="code" autocomplete="off" class="layui-input">
                             </div>
 						</div>
 						
                         <div class="layui-inline">
-                            <button type="submit" class="layui-btn layui-btn-primary"  lay-submit lay-filter="data-search-btn"><i class="layui-icon"></i> 搜 索</button>
+                            <button type="submit" class="layui-btn layui-btn-primary" id="search" lay-submit lay-filter="data-search-btn"><i class="layui-icon"></i> 搜 索</button>
                         </div>
                     </div>
                 </form>
@@ -50,18 +50,10 @@
             table = layui.table,
             miniPage = layui.miniPage;
 			
-		var data=[
-			{
-				"id":1,
-				"name":"zju",
-				"code":"sdjofla",
-				"type":"本科"
-			}
-	
-		]
+
         table.render({
             elem: '#currentTableId',
-            data:data,
+            data:[],
             toolbar: '#toolbarDemo',
             defaultToolbar: ['filter', 'exports', 'print', {
                 title: '提示',
@@ -83,14 +75,19 @@
 
         // 监听搜索操作
         form.on('submit(data-search-btn)', function (data) {
-            var result = JSON.stringify(data.field);
-			console.log(data.field)
-            layer.alert(result, {
-                title: '最终的搜索信息'
-            });
-            return false;
-        });
+			$.get('/api/schoolList',data=data.field,function(res){
+			    if(res.code==0){
+			        newdata=res.data?res.data:[];
+			        table.reload('currentTableId',{data:newdata});
+			    }
+			})
+		    return false;
+        })
 
+        var tableFresh=function(){
+            $("#search").click();
+        }
+        tableFresh();
         /**
          * toolbar事件监听
          */
@@ -108,6 +105,9 @@
                     area: [openWH[0] + 'px', openWH[1] + 'px'],
                     offset: [openWH[2] + 'px', openWH[3] + 'px'],
                     content: content,
+                    end:function(){
+                        tableFresh();
+                    }
                 });
                 $(window).on("resize", function () {
                     layer.full(index);
@@ -115,16 +115,13 @@
             } 
         });
 
-        //监听表格复选框选择
-        table.on('checkbox(currentTableFilter)', function (obj) {
-            console.log(obj)
-        });
+
 
         table.on('tool(currentTableFilter)', function (obj) {
             var data = obj.data;
             if (obj.event === 'edit') {
 
-                var content = miniPage.getHrefContent('/province/addSchool');
+                var content = miniPage.getHrefContent('/province/editSchool?id='+data.id);
                 var openWH = miniPage.getOpenWidthHeight();
 
                 var index = layer.open({
@@ -136,6 +133,9 @@
                     area: [openWH[0] + 'px', openWH[1] + 'px'],
                     offset: [openWH[2] + 'px', openWH[3] + 'px'],
                     content: content,
+                    end:function(){
+                        tableFresh();
+                    }
                 });
                 $(window).on("resize", function () {
                     layer.full(index);
@@ -143,8 +143,20 @@
                 return false;
             } else if (obj.event === 'delete') {
                 layer.confirm('真的删除行么', function (index) {
-                    obj.del();
-                    layer.close(index);
+                    $.ajax({
+                        url:"/api/school?id="+data.id,
+                        method:"DELETE",
+                        success:function(res){
+                            if(res.code==0){
+                                layer.msg("删除成功！");
+                                obj.del();
+                                layer.close(index);
+                            }
+                            else{
+                                layer.msg("删除失败！"+res.msg);
+                            }
+                        }
+                    })
                 });
             }
         });
