--- a/app/templates/province/testingStandard.html
+++ b/app/templates/province/testingStandard.html
@@ -1,12 +1,13 @@
 <div class="layuimini-container layuimini-page-anim">
     <div class="layuimini-main">
+		<div style="display:none" id="id">{{id}}</div>
 		<fieldset class="table-search-fieldset">
 		    <legend>选择年级</legend>
 		    <div style="margin: 10px 10px 10px 10px">
-		        <form class="layui-form layui-form-pane" lay-filter="serch_form" action="">
+		        <form class="layui-form layui-form-pane" lay-filter="search_form" action="">
 		            <div class="layui-form-item">
 		                <div class="layui-inline">
-		                    <label class="layui-form-label">学校名称</label>
+		                    <label class="layui-form-label">选择年级</label>
 		                    <div class="layui-input-inline">
 		                        <select name="level" lay-filter="level_select">
 									<option value=""></option>
@@ -48,39 +49,21 @@
 		 */
         form.render();
 		form.on('select(level_select)', function(data){
-		  $.get('/api/standard?level='+data.value,function(res){
-			  var newdata=res.code==0?res.data:[];
-			  table.reload('currentTableId', {
-			  				data:newdata
-			  });
-		  })
-		  
+			if(data.value!=""){
+				$.get('/api/standard?id='+$('#id').text()+'&level='+data.value,function(res){
+				  var newdata=res.code==0?res.data:[];
+				  table.reload('currentTableId', {
+								data:newdata
+				  });
+			  })
+			}
 		});
 		
-		data=[
-			{
-				id:1,
-				name:"3.0秒",
-				score:20,
-				bottom:3.0,
-				top:3.1,
-				level:"大一",
-				comment:"备注"
-			},
-			{
-				id:2,
-				name:"3.1秒",
-				score:20,
-				bottom:3.1,
-				top:3.2,
-				level:"大一",
-				comment:"备注"
-			}
-		]
+
         table.render({
             elem: '#currentTableId',
 			toolbar: '#toolbarDemo',
-            data:data,
+            data:[],
             cols: [[
                 {field: 'id', title: '序号'},
 				{field: 'name', title: '标准名称',edit:"text"},
@@ -91,28 +74,81 @@
 				{field: 'comment', title: '备注',edit:"text"},
                 {title: '操作', minWidth: 150, toolbar: '#currentTableBar', align: "center"}
             ]],
-            skin: 'line'
+            skin: 'line',
+            page: true
         });
 		
         table.on('tool(currentTableFilter)', function (obj) {
             var data = obj.data;
             if (obj.event === 'save') {
 				$.each(data,function(key,value){
-					console.log(""+key+value);
 					if(key!='id'&&key!="comment"){
 						if(value==""){
 							layer.msg("存在项未填！");
 							return;
 						}
 					}
-					//这里发送请求
+				})
+				//这里发送请求
+				if(data.id==null){
+					//处理新增
+					data.project_id=$('#id').text();
+					$.post('/api/standard',data,function(res){
+						if(res.code==0){
+							layer.msg('保存成功!');
+						}
+						else{
+							layer.msg("保存失败!")
+						}
+					});
+				}
+				else{
+					//处理更新
+					$.ajax({
+						url:'/api/standard',
+						method:'PUT',
+						data:data,
+						success:function(res){
+							if(res.code==0){
+							layer.msg('保存成功!');
+							}
+							else{
+								layer.msg("保存失败!")
+							}
+						}
+					});
+				}
+				//更新数据表格
+				$.get('/api/standard?id='+$('#id').text()+'&level='+form.val("search_form").level,function(res){
+				  var newdata=res.code==0?res.data:[];
+				  table.reload('currentTableId', {
+								data:newdata
+				});
 				})
             }
 			else if(obj.event==='del'){
 				layer.confirm('真的删除么', function(index){
+				      console.log(obj);
+				      if(obj.data.id!=null){
+				      	//根据id判断是本地还是数据库里的
+				      	$.ajax({
+				      		url:'/api/standard?id='+obj.data.id,
+				      		method:'DELETE',
+				      		success:function(res){
+				      			if(res.code==0){
+				      				layer.msg("删除成功！");
+				      			}
+				      			else{
+				      				layer.msg("删除失败！"+res.msg);
+				      				//直接返回
+				      				layer.close(index);
+				      				return false;
+				      			}
+				      		}
+				      	})
+				      }
 				      obj.del(); //删除对应行（tr）的DOM结构，并更新缓存
 				      layer.close(index);
-				      //向服务端发送删除指令
 				    });
 			}
         });
