--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -75,12 +75,7 @@
                     <input type="password" name="password" lay-verify="required"  placeholder="请输入密码" maxlength="20">
                     <span class="bind-password icon icon-4"></span>
                 </div>
-
-                <div id="validatePanel" class="item" style="width: 137px;">
-                    <input type="text" name="captcha" placeholder="请输入验证码" maxlength="4">
-                    <img id="refreshCaptcha" class="validateImg"  src="/static/layuimini/images/captcha.jpg" >
-                </div>
-
+                 <div id="slider"></div>
             </div>
             
             <div class="layui-form-item" style="text-align:center; width:100%;height:100%;margin:0px;">
@@ -93,12 +88,17 @@
     ©版权所有 <span class="padding-5">|</span><a target="_blank" href="#">备案号</a>
 </div>
 <script src="/static/layuimini/lib/layui-v2.5.5/layui.js" charset="utf-8"></script>
+<script src="/static/layuimini/js/lay-config.js?v=2.0.0" charset="utf-8"></script>
 <script>
-    layui.use(['form','jquery'], function () {
+    layui.use(['form','jquery','sliderVerify'], function () {
         var $ = layui.jquery,
             form = layui.form,
-            layer = layui.layer;
+            layer = layui.layer,
+            sliderVerify = layui.sliderVerify;
 
+            var slider = sliderVerify.render({
+                elem: '#slider'
+            })
         
         $('.bind-password').on('click', function () {
             if ($(this).hasClass('icon-5')) {
@@ -120,6 +120,10 @@
 
         // 进行登录操作
         form.on('submit(login)', function (data) {
+            if(!slider.isOk()){
+                layer.msg("请先通过滑块验证");
+                return false;
+            }
             data = data.field;
             if (data.username == '') {
                 layer.msg('用户名不能为空');
